# whatsapp_rust

./: Cargo.toml  README.md
src/: app.rs  commands.rs  config.rs  formatting.rs  main.rs  persistence.rs  split_view.rs  utils.rs  whatsapp.rs  widgets.rs
